httppathregularexp.yaml
RegularExpression

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-regex-route
  namespace: httpbin
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong-gw-demo
      namespace: kong
  rules:
    - matches:
      - path:
          type: RegularExpression
          value: /api/v(1|2)
      backendRefs:
      - name: httpbin-svc
        kind: Service
        port: 8080
