requestredirect.yaml
RequestRedirect
This filter is designed to short-circuit the request and redirect it to an entirely different destination. Consequently, the backendRef cannot be used with this filter, as it doesn’t align with the concept of redirection. If you don’t specify the path, port, host, etc., it will utilize the original request information. In the example below, the request is short-circuited to httpbin server.

There are two types, ReplacePrefixMatch and ReplaceFullPath. However, from testing it seems Kong Ingress Controller does not support ReplacePrefixMatch at the moment. You can find ReplaceFullPath below.

ReplaceFullPath

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
  namespace: httpbin
  annotations:
    konghq.com/strip-path: "true"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong-gw-demo
      namespace: kong
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /test
      filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: http
          hostname: httpbin.org
          path:
            type: ReplaceFullPath
            replaceFullPath: /anything/paprika
          statusCode: 301
          port: 80
